# round-robin-rifle

./: .idanarye.moonicipal.lua  Cargo.toml
.github/workflows/: release.yaml
assets/: bullet.glb  cover-image.blend  crosshair.blend  crosshair.glb  human.blend  human.glb  rifle.blend  rifle.glb
models/: bullet.blend  rifle.blend
src/: animation.rs  arena.rs  bullet.rs  bumpin.rs  camera.rs  crosshair.rs  killing.rs  level_reloading.rs  lib.rs  main.rs  menu.rs  opponent.rs  opponent_behavior.rs  player.rs  rifle.rs  score.rs  utils.rs
