[package]
name = "round-robin-rifle"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.9"
bevy-egui-kbgp = "0.11.0"
bevy-tnua = { git = "https://github.com/idanarye/bevy-tnua.git", version = "0.1.0", features = ["rapier_3d"] }
bevy_egui = "0.19.0"
bevy_rapier3d = "0.20.0"
bitflags = "1.3.2"
leafwing-input-manager = "0.8.0"
